src/scss/vanity.scss
//some angular material things
@use '@angular/material' as mat;
@import '@angular/material/theming';

@include mat.core();

@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap');
// @import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;600;700&display=swap');

$primary: #5a34c6;
$primarylight: #776edc;
$light: #c3b6e9;
$green: #17ebb8;
$secondary: #606885;

// General border radius
$border-radius: 0.2rem;
$border-radius-sm: 0.3rem;
$border-radius-lg: 0.5rem;

$input-border-radius: 0.2rem;
$input-border-radius-sm: 0.3rem;
$input-border-radius-lg: 0.5rem;

$btn-border-radius: 0.2rem;
$btn-border-radius-sm: 1rem;
$btn-border-radius-lg: 0.5rem;

$alert-border-radius: 0.5rem;

// Custom
$custom-xapp-colors: (
  'primarylight': $primarylight,
  'primary': $primary,
  'light': $light,
  'success': $green
);

body.vanity {
  background: $primary !important;

  // font-family: 'Readex Pro', sans-serif;
  font-family: 'Proxima Nova', sans-serif;

  .loader {
    // width: 100%;
    // height: 100%;
    min-height: 100vh;
    min-width: 100vw;
    position: absolute;
    top: 0;
    background: rgba(0, 0, 0, 0.3);
    z-index: 100;
    display: grid;
    align-items: center;
    align-content: center;
    justify-content: center;
    justify-items: center;
    label {
      display: block;
      margin-top: 0.5rem;
    }
  }
  .inlineloader {
    display: inline-block;

    label {
      display: block;
      margin-top: 0.5rem;
    }
  }

  h1 {
    font-size: 1.8rem;
    font-weight: 800;
    line-height: 2rem;
    small {
      font-size: 1.2rem;
      color: $green;
    }
  }
  h3 {
    font-size: 1.2rem;
    font-weight: 800;
    line-height: 1.2rem;
  }

  .btn {
    padding: 0.15rem 1.5rem;
    color: white;
  }
  .alert {
    font-weight: normal;
  }
  .alert-info {
    background: #a660ff69;
    border-color: #89799d;
    color: white;
    text-align: center;
  }
  label {
    font-weight: 600;
    padding: 0.25rem 0;
  }

  div.sticky {
    position: -webkit-sticky; /* Safari */
    position: sticky;
    top: 0;
    background: $primary;
    box-shadow: 0px 6px 10px darken($primary, 3%);
  }

  .btn.icon-button {
    display: flex;
    padding: 0.3rem 1.0rem;
  }

  form {
    font-family: 'Ubuntu Mono', monospace;
    input[type='search']::-webkit-search-cancel-button {
      -webkit-appearance: searchfield-cancel-button;
    }
    .input-group {
      .input-group-text {
        background: white;
        border-color: white !important;
        outline: none;
        padding: 0.375rem 0.25rem 0.375rem 0.75rem;
        color: $light;
        font-size: 1.4rem;
        border-radius: 0.5rem;
      }
      .form-control {
        border-color: white !important;
        padding: 0.5rem 1rem 0.7rem 0.5rem;
        box-shadow: none;
        font-weight: bold;
        color: $primary;
        &::placeholder {
          font-weight: bold;
          font-size: 1rem;
          vertical-align: middle;
        }
      }
    }
    input.ng-valid {
      border: 1px solid white !important;
      width: 100% !important;
    }
    input.ng-touched {
      border: 1px solid white !important;
      width: 100% !important;
    }
    .btn.search {
      width: 100%;
      padding: 0.25rem 1.5rem !important;
      color: white !important;
    }

    ul.notes {
      padding: 0.5rem 0.75rem 0.25rem 0.75rem;
      margin-bottom: 0rem;
      color: $light !important;
      font-size: 0.8rem;
      line-height: 1rem;
      list-style-type: '*';
      li {
        padding-left: 0.5rem;
      }
    }
  }

  div.listarea {
    // display: none;
    ul.list {
      list-style: none;
      padding: 0;
      margin: 0;
      li {
        &:not(:last-child) {
          border-bottom: 1px solid darken($light, 15%);
        }
        display: grid;
        grid-template-columns: auto 5rem;
        align-items: center;
        align-content: space-between;
        padding: 0.5rem 0.25rem;
        code {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
          color: $light;
          font-size: 0.8em;
          b {
            color: white !important;
          }
        }
        > div {
          text-align: right;
          .btn {
            padding: 0.15rem 1.25rem !important;
            color: white !important;
          }
        }
      }
    }
  }

  #topbar {
    height: 3rem;
    .mat-toolbar-row,
    .mat-toolbar-single-row {
      padding: 0;
    }
    .btn {
      margin: 0;
      padding: 0.75rem 0.25rem !important;
      font-size: 0.8em;
      border-radius: 0;
      border: none;
      background: darken($primary, 12%);
      color: $light !important;
      outline: none;
      box-shadow: inset 0px 0px 5px darken($primary, 25%);
      &.active {
        background: $primary;
        color: #fff !important;
        box-shadow: none;
      }
      &:focus {
        box-shadow: none;
      }
    }
  }

  .mat-stepper-horizontal {
    // display: grid;
    // grid-template-rows: 4rem auto;
    font-family: 'Proxima Nova', sans-serif;
    margin: 0;
    .mat-horizontal-stepper-header-container {
      height: 4rem;
      box-shadow: 0px 6px 10px darken($primary, 3%);

      .mat-step-icon.mat-step-icon-state-done {
        background: $green !important;
      }
      .mat-step-icon.mat-step-icon-state-number {
        background: $light !important;
      }
      .mat-step-icon.mat-step-icon-state-number.mat-step-icon-selected {
        background: #fff !important;
        color: $primary !important;
      }
    }
    .mat-horizontal-content-container {
      padding: 0;
      .mat-horizontal-stepper-content[aria-expanded='true'] {
        height: calc(100vh - 3rem - 4rem);
        display: grid;
        grid-template-rows: auto 4.5rem;
        overflow: scroll;
        padding: 0rem 1rem;

        h2 {
          margin-top: 1rem;
        }

        footer.nextback {
          display: grid;
          grid-template-columns: auto auto;
          grid-column-gap: 1rem;
          // border-top: 1px solid red;
          padding: 0.5rem 0 1rem 0;
          // padding: 1rem 0rem;
          // min-height: 5rem;
          .btn {
            width: 100%;
            font-size: 1.2rem;
          }
          &.fullwidth {
            grid-template-columns: auto;
            grid-column-gap: 0rem;
          }
        }
      }
    }
  }

  ul.accountlist {
    list-style: none;
    padding: 0;
    margin: 0;
    li {
      &:not(:last-child) {
        border-bottom: 1px solid darken($light, 15%);
      }
      padding: 1rem;
      div.subgrid {
        display: grid;
        grid-template-columns: 5fr 5fr;
        align-items: center;
        align-content: space-between;
        // test
      }
    }
  }

  code.address {
    background: #17ebb842;
    padding: 0.5rem;
    border-radius: 0.4rem;
    width: 100%;
    display: inline-block;
    text-align: center;
    color: $green;
    margin-bottom: 0.5rem;
  }
  .btn.changeaccount {
    width: 100%;
    padding: 0.25rem 1.5rem !important;
    color: white !important;
  }
  .btn.signbutton {
    width: 100%;
    padding: 0.75rem 1.5rem !important;
    color: $primary !important;
    border-radius: 1rem !important;
    background: #fff;
  }
  .mat-checkbox {
    font-family: 'Proxima Nova', sans-serif;
    background: #fff;
    margin-bottom: 1rem;
    border-radius: $border-radius-lg;
    padding: 0.75rem;
    color: $secondary !important;

    &.mat-checkbox-checked {
      background-color: rgba($green, 0.18);
      color: $green !important;
      .mat-checkbox-frame {
        background: $green !important;
      }
    }

    .mat-checkbox-layout {
      display: grid;
      grid-template-columns: 2rem auto;
      column-gap: 0.5rem;
      padding: 0;
      align-items: center;
      align-content: center;
      .mat-checkbox-inner-container {
        // border: 2px solid yellow;
        height: 1.5rem;
        width: 1.5rem;
        margin: 0;
        margin-top: 0;
        display: grid;
        align-items: center;
        align-content: center;
        .mat-checkbox-frame {
          border-radius: $border-radius-lg !important;
          background: rgba($secondary, 0.3);
          border-color: rgba($secondary, 0.3);
        }
      }
      .mat-checkbox-label {
        font-weight: normal;
        line-height: 1.2rem;
        font-size: 0.9rem;
      }
    }
  }

  .snackbar-success {
    display: flex;
    justify-content: center;
    background-color: $primarylight !important;
    color: rgb(59, 220, 150) !important;
    border: 1px !important;
    border-color: black !important;
    font-weight: bold;
  }

  .snackbar-failed {
    display: flex;
    justify-content: center;
    background-color: $primarylight !important;
    color: rgb(255, 91, 91) !important;
    border: 1px !important;
    border-color: black !important;
    font-weight: bold;
  }

  .mat-card.mat-card-red {
    background-color: $primarylight !important;
    color: rgb(255, 91, 91) !important;
  }

  .mat-card.mat-card-orange {
    background-color: $primarylight !important;
    color: rgb(248, 191, 76) !important;
  }

  .mat-card.mat-card-green {
    background-color: $primarylight !important;
    color: rgb(59, 220, 150) !important;
  }

  .mat-card.mat-card-blue {
    background-color: $primarylight !important;
    color: rgb(48, 82, 255) !important;
  }

  .topbar-button-left,
  .topbar-button-right {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
  }

  // .mat-horizontal-content-container {
  //   padding: 5px !important;
  // }

  //put connector lines in correct position
  .mat-stepper-horizontal-line {
    margin: 0px !important;
  }

  //disable header navigation
  .mat-horizontal-stepper-header{
    pointer-events: none !important;
  }
}

